--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -18,7 +18,8 @@
         "scripts": [ "background.js" ],
         "persistent": false
     },
-
+    "content_security_policy": "script-src 'self' 'unsafe-eval';",
+    
     "content_scripts": [{
         "js": [ "content.js" ],
         "matches": [ "*://example.com/*" ]
