--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -22,7 +22,7 @@
     
     "content_scripts": [{
         "js": [ "content.js" ],
-        "matches": [ "*://example.com/*" ]
+        "matches": [ "http://*/*", "https://*/*" ]
     }],
 
     "browser_action": {
@@ -35,5 +35,5 @@
         }
     },
 
-    "permissions": [ ]
+    "permissions": [ "<all_urls>" ]
 }
